# my-openenv

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_agent.py
server/: app.py
