[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-city-traffic-control"
version = "1.0.0"
description = "A Gymnasium-compliant smart city traffic light control environment for congestion reduction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium==1.1.1",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0"
]

[tool.setuptools]
packages = ["."]